# libreactor_techempower

./: Makefile.am  README.md  autogen.sh  configure.ac
lib/libreactor_core/src/reactor_core/: reactor_stream.c
lib/libreactor_net/src/reactor_net/: reactor_http_server.c  reactor_http_server.h  reactor_rest_server.c  reactor_rest_server.h  reactor_tcp_server.c
src/: rest_server.c  setup.c
test/: valgrind.sh
